--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         </nav>
     </header>
     <main>
-        <h1><strong>PORTAFOLIO CAMILO URBANO</strong></h1>
-        <h2>Diseñador gráfico</h2>
+        <h1><strong>PORTAFOLIO</strong></h1>
+        <h2>Diseñador gráfico - Camilo Urbano</h2>
         <p>Aquí encontrarás todos los trabajos realizados por el diseñador Camilo.</p>
         <button onclick="window.open('https://www.linkedin.com/in/camilo-urbano-burbano-064ba2207/', '_blank')">Ver LinkedIn</button>
         <button onclick="window.open('https://www.instagram.com/camilourbano/', '_blank')">Ver Instagram</button>
         <img src="https://media.licdn.com/dms/image/D4D03AQH1gkXH5b6m9g/profile-displayphoto-shrink_800_800/0/1683296326591?e=2147483647&v=beta&t=KXJHk2y8jv8nY3Yk2bF3p4Z1g5c5r3F5c5r3F5c5r3F5c" alt="Camilo Urbano" width="200">
     </main>
     <footer>
-        <p>Contacto: camilo.urbano@email.com</p>
+        <p>Contacto: camilo42067@gmail.com</p>
         <p>&copy; 2025 Camilo Urbano. Todos los derechos reservados.</p>
     </footer>
 </body>
