--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1><strong>PORTAFOLIO</strong></h1>
-        <h2>Diseñador gráfico - Camilo Urbano</h2>
+        <h2>Diseñador gráfico - <span>Camilo Urbano</span></h2>
         <p>Aquí encontrarás todos los trabajos realizados por el diseñador Camilo.</p>
         <button onclick="window.open('https://www.linkedin.com/in/camilo-urbano-burbano-064ba2207/', '_blank')">Ver LinkedIn</button>
         <button onclick="window.open('https://www.instagram.com/camilourbano/', '_blank')">Ver Instagram</button>
